--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
 
+    <link rel="icon" href="http://files.softicons.com/download/business-icons/mono-business-icons-2-by-custom-icon-design/png/128x128/news.png"/>
+
     <title>NYT Search</title>
   </head>
   <body>
